# cce

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run_live.py
docs/decompose/: stage-0-development-standards.md
docs/decompose/test-suite/: stage-1-design-pack.md  stage-2-implementation-skeletons.md  stage-3-task-index.md  tasks_m01.md  tasks_m02.md  tasks_m03.md  tasks_m04.md  tasks_m05.md  tasks_m06.md  tasks_m07.md  tasks_m08.md
docs/internal/: content-curation-engine-generic.md  content-curation-engine-landscape.md  content-curation-engine-next-steps.md  content-curation-engine.md  package-structure.md  run-log.md
docs/internal/phase-2/: phase-2-assessment.md
docs/internal/research/: ai_writing_vs_human_writing.md  mitigations.md
docs/internal/tests/: test-plan.md
policies/: peer-reviewed.yaml
scripts/: g.sh
src/cce/: output.py  parsing.py
src/cce/config/: loader.py  types.py
src/cce/discovery/: discoverer.py
src/cce/evidence/: sqlite.py  store.py
src/cce/llm/: anthropic.py  base.py
src/cce/models/: __init__.py  content.py  evidence.py  job.py  package.py  request.py
src/cce/orchestrator/: pipeline.py
src/cce/policy/: loader.py  types.py
tests/: conftest.py  test_output.py  test_parsing.py
tests/test_config/: test_loader.py
tests/test_discovery/: test_discoverer.py
tests/test_evidence/: test_sqlite.py
tests/test_models/: test_models.py
tests/test_orchestrator/: test_pipeline.py
tests/test_policy/: test_loader.py
tests/test_synthesis/: test_writer.py
tests/test_verification/: test_gate.py  test_verifier.py
(+5 files in other folders)
